--- a/src/config/tokens/themes/basic/keys/legacy/_legacy-keys.scss
+++ b/src/config/tokens/themes/basic/keys/legacy/_legacy-keys.scss
@@ -41,7 +41,7 @@ $placeholder-color-with-opacity: $color-asphalt-with-opacity;
 $placeholder-on-secondary-color: $color-asphalt;
 
 // States
-$disabled-background-on-secondary-color: $disabled-background-color;;
+$disabled-background-on-secondary-color: $disabled-background-color;
 $disabled-text-on-secondary-color: $disabled-text-color;
 
 // borders
