--- a/src/_themes.scss
+++ b/src/_themes.scss
@@ -7,7 +7,7 @@
 //   - Hacker
 // Loading order is important due to theme dependencies
 
-@import "Themes/basic-theme.scss";
-@import "Themes/dark-theme.scss";
-@import "Themes/black-theme.scss";
-@import "Themes/hacker-theme.scss";
+@import "Themes/basic-theme";
+@import "Themes/dark-theme";
+@import "Themes/black-theme";
+@import "Themes/hacker-theme";
