--- a/src/config/maps/_config-core-maps.scss
+++ b/src/config/maps/_config-core-maps.scss
@@ -2,6 +2,7 @@
 // This partial loads Core config maps
 
 @import "core/core-motion-map";
+@import "core/core-borders";
 @import "core/core-spacing-map";
 @import "core/core-radius-map";
 @import "core/core-shadows-map";
