--- a/src/config/maps/core/_core-fonts-map.scss
+++ b/src/config/maps/core/_core-fonts-map.scss
@@ -1,4 +1,4 @@
-// COR MAP: FONTS
+// CORE MAP: FONTS
 // This partial defines font-related maps.
 // - Maps include Font scope tokens.
 // - Maps are collected into the $core-settings-map and are interpolated into custom properties.
