--- a/src/core/_core-settings.scss
+++ b/src/core/_core-settings.scss
@@ -5,6 +5,7 @@
 $core-settings-map: map-collect(
                 $core-motion-map,
                 $core-spacing-map,
+                $core-border-map,
                 $core-border-radius-map,
                 $core-common-map,
                 $core-fonts-map,
