* Add common dependency loader. * Cleanup.

--- a/src/utilities/_utilities-maps.scss
+++ b/src/utilities/_utilities-maps.scss
@@ -1,5 +1,6 @@
-// Box Core: Maps
-// - Mock maps the should be delivered Via "monday-ui-styles"
+// UTILITIES: Value Maps
+// - Maps for the utility mixin.
+// - imported using "common.scss" partial.
 
 $utility-spacing-vars: (
         0: 0,
