--- a/src/index.scss
+++ b/src/index.scss
@@ -8,10 +8,12 @@
 // - CSS Output is custom properties definitions for global :root and themes scopes.
 // - Currently we do not include themes within this refactor scope.
 
+// Dependencies
 @import "functions";
 @import "mixins";
 @import "config";
 
+// Output
 @import "core";
 @import "themes";
 
