--- a/src/config/maps/themes/black/keys/_black-theme-keys.scss
+++ b/src/config/maps/themes/black/keys/_black-theme-keys.scss
@@ -39,6 +39,7 @@ $theme-black-keys: (
 // - Map is collected into the $theme-black-settings map and is interpolated into custom properties.
 
 $theme-black-shadow-keys: (
+        box-shadow-xs: $theme-black-box-shadow-xs,
         box-shadow-small: $theme-black-box-shadow-small,
         box-shadow-medium: $theme-black-box-shadow-medium,
         box-shadow-large: $theme-black-box-shadow-large,
