--- a/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
+++ b/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
@@ -42,6 +42,7 @@ $theme-dark-keys: (
 // - Map is collected into the $theme-dark-settings map and is interpolated into custom properties.
 
 $theme-dark-shadow-keys: (
+        box-shadow-xs: $theme-dark-box-shadow-xs,
         box-shadow-small: $theme-dark-box-shadow-small,
         box-shadow-medium: $theme-dark-box-shadow-medium,
         box-shadow-large: $theme-dark-box-shadow-large,
