--- a/src/config/tokens/_config-core-tokens.scss
+++ b/src/config/tokens/_config-core-tokens.scss
@@ -1,6 +1,9 @@
 // CONFIG: CORE TOKENS
 // This partial loads Core config tokens
 // - loading order is important
+// -- please verify token dependency when adding.
+// -- we put tokens without dependencies first.
+
 @import "core/core-motion";
 @import "core/core-border";
 @import "core/core-opacity";
