Correct Disabled color token: basic theme * Add $color-wolf_gray-muted to palette * Revert dark theme value to $color-wolf_gray-muted

--- a/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
+++ b/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
@@ -20,7 +20,7 @@ $color-fog: #797e93;
 $color-snow: #d5d8df;
 // - Muted
 $color-silver_muted: #3c3f59;
-$color-spacegrey_muted: #5d6072;
+$color-wolf_gray-muted: rgba($color-wolf_gray, 0.75);
 
 // Text
 $color-spacegrey: #9699a5;
