Themes cleanups * "primary-on-secondary-color" moved to legacy in dark theme. * Palette related comments on "black-theme"

--- a/src/config/tokens/themes/black/keys/_black-theme-keys.scss
+++ b/src/config/tokens/themes/black/keys/_black-theme-keys.scss
@@ -20,7 +20,7 @@ $theme-black-text-color-on-inverted: $color-vanta;
 $theme-black-secondary-text-color: $color-mouse;
 $theme-black-placeholder-color: $color-mouse;
 $theme-black-icon-color: $color-mouse;
-$theme-black-link-color: $color-arctic_blue;
+$theme-black-link-color: $color-arctic_blue;// color from dark palette
 
 // Background colors
 $theme-black-primary-background-color: $color-vanta;
@@ -37,10 +37,10 @@ $theme-black-disabled-background-color: $color-dust-muted;
 
 $theme-black-positive-color: $positive-color;
 $theme-black-positive-color-hover: $positive-color-hover;
-$theme-black-positive-color-selected: $color-forest_green;
+$theme-black-positive-color-selected: $color-forest_green;// color from dark palette
 $theme-black-negative-color: $negative-color;
 $theme-black-negative-color-hover: $negative-color-hover;
-$theme-black-negative-color-selected: $color-maroon_red;
+$theme-black-negative-color-selected: $color-maroon_red;// color from dark palette
 $theme-black-private-color: $private-color;
 $theme-black-shareable-color: $shareable-color;
 
