Reorder basic themes tokens and legacy re-order * Reorder keys output for unified standard with token charts. * Reorder tokens definitions for unified standard with token charts. * Move Success and error tokens to legacy keys and legacy palette. * Link positive and negative tokens to palette values instead of success and error.

--- a/src/config/maps/themes/basic/palette/legacy/_legacy-pallete.scss
+++ b/src/config/maps/themes/basic/palette/legacy/_legacy-pallete.scss
@@ -5,6 +5,12 @@
 // - Keys sort order is according to legacy tokens sort order.
 
 $theme-basic-legacy-palette: (
+        color-success: $color-success,
+        color-success-hover:$color-success-hover,
+        color-success-highlight:$color-success-highlight,
+        color-error: $color-error,
+        color-error-hover: $color-error-hover,
+        color-error-highlight: $color-error-highlight,
         color-dark_marble: $color-dark_marble,
         color-marble: $color-marble,
         color-gainsboro: $color-gainsboro,
