--- a/src/config/tokens/themes/basic/keys/_keys.scss
+++ b/src/config/tokens/themes/basic/keys/_keys.scss
@@ -14,15 +14,9 @@ $primary-color: $color-basic_blue;
 $primary-hover-color: $color-dark_blue;
 $primary-selected-color: $color-highlight_blue;
 $primary-text-color: $color-mud_black;
-
 $text-color-on-primary: $color-snow_white;
 $text-color-on-inverted: $color-snow_white;
-
 $secondary-text-color: $color-asphalt;
-$placeholder-color: $color-asphalt;
-$icon-color: $color-asphalt;
-
-$link-color: $color-link_color;
 
 // Background colors
 $primary-background-color: $color-snow_white;
@@ -33,23 +27,29 @@ $allgrey-background-color: $color-riverstone_gray;
 // - contrast hook
 $inverted-color-background: $color-mud_black;
 
-// System Semantics (state, status)
-$disabled-text-color: $color-asphalt;
-$disabled-background-color: $color-ui_grey-muted;
-
-$positive-color: $color-success;
-$positive-color-hover: $color-success-hover;
-$positive-color-selected: $color-success-highlight;
-$negative-color: $color-error;
-$negative-color-hover: $color-error-hover;
-$negative-color-selected: $color-error-highlight;
-$private-color: $color-bazooka;
-$shareable-color: $color-purple;
+// Generic Elements
+$placeholder-color: $color-asphalt;
+$icon-color: $color-asphalt;
+$link-color: $color-link_color;
 
 // UI elements
 // - Borders
 $ui-border-color: $color-wolf_gray;
 $layout-border-color: #d0d4e4; // Todo: TBD, should be - var(--color-ui_grey)
+
+// System Semantics (state, status)
+// - State
+$disabled-text-color: $color-asphalt;
+$disabled-background-color: $color-ui_grey-muted;
+// - Status
+$positive-color: $color-basic_green;
+$positive-color-hover: $color-dark_green;
+$positive-color-selected: $color-pastel_green;
+$negative-color: $color-basic_red;
+$negative-color-hover: $color-blood_red;
+$negative-color-selected: $color-pastel_red;
+$private-color: $color-bazooka;
+$shareable-color: $color-purple;
 
 // - Shadows
 $shadow-xs-opacity: $opacity-10;
@@ -57,7 +57,7 @@ $shadow-small-opacity: $opacity-20;
 $shadow-medium-opacity: $shadow-small-opacity;
 $shadow-large-opacity: $opacity-30;
 $shadow-color: $color-black;
-
+// - Shadows definitions
 $box-shadow-xs: $shadow-size-xs rgba($shadow-color, $shadow-xs-opacity);
 $box-shadow-small: $shadow-size-small rgba($shadow-color, $shadow-small-opacity);
 $box-shadow-medium: $shadow-size-medium rgba($shadow-color, $shadow-medium-opacity);
