--- a/src/config/tokens/themes/basic/palette/_palette.scss
+++ b/src/config/tokens/themes/basic/palette/_palette.scss
@@ -8,6 +8,8 @@ $color-basic_blue: #0073ea;
 $color-dark_blue: #0060b9;
 $color-highlight_blue: #cce5ff;
 
+$color-link_color: #1f76c2;
+
 // - Semantics
 $color-basic_green: #258750;
 $color-dark_green: #007038;
@@ -23,29 +25,14 @@ $color-bazooka: #f65f7c;
 // Natural
 $color-black: #000000;
 $color-snow_white: #ffffff;
-
 // Natural / Gray
+$color-riverstone_gray: #f6f7fb;
 $color-ui_grey: #dcdfec;
 $color-wolf_gray: #c3c6d4;
 $color-mud_black: #323338;
-$color-riverstone_gray: #f6f7fb;
 // - Muted
 $color-ui_grey-muted: #ecedf5;
-
-// Text
-$color-asphalt: #676879;
-$color-link_color: #1f76c2;
+$color-asphalt: #676879; // Text
 
 // Surface
 $color-surface: #292f4c;
-
-// Semantics old aliases,
-// - Success, used as positive key alias
-$color-success: $color-basic_green;
-$color-success-hover: $color-dark_green;
-$color-success-highlight: $color-pastel_green;
-
-// - Error, used as negative key alias
-$color-error: $color-basic_red;
-$color-error-hover: $color-blood_red;
-$color-error-highlight: $color-pastel_red;
