Reorder dark themes tokens and legacy re-order * Reorder keys output for unified standard with token charts. * Reorder tokens definitions for unified standard with token charts. * Move add legacy palette and add redundant colors to it. * Cleanup basic palette and uniform it structure

--- a/src/config/tokens/_config-dark-theme-tokens.scss
+++ b/src/config/tokens/_config-dark-theme-tokens.scss
@@ -2,5 +2,6 @@
 // This partial loads dark theme's config tokens
 
 @import "themes/dark/palette/dark-theme-palette";
+@import "themes/dark/palette/legacy/dark-theme-legacy-palette";
 @import "themes/dark/keys/dark-theme-keys";
 @import "themes/dark/keys/legacy/dark-theme-legacy-keys";
