--- a/src/config/tokens/themes/dark/keys/_dark-theme-keys.scss
+++ b/src/config/tokens/themes/dark/keys/_dark-theme-keys.scss
@@ -1,5 +1,6 @@
 //  DARK THEME  TOKENS: SEMANTIC KEYS COLORS
 // - This partial defines Basic Theme's Semantic Keys color tokens
+// FIGMA REFERENCE: COLOR KEYS
 
 // - Theme keys should hold registration values (colors, content colors, other keys)
 //   - In some case there are unique hex values assignments
@@ -13,15 +14,9 @@ $theme-dark-primary-color: $primary-color;
 $theme-dark-primary-hover-color: $primary-hover-color;
 $theme-dark-primary-selected-color: $color-ocean_blue;
 $theme-dark-primary-text-color: $color-snow;
-
-$theme-dark-text-color-on-primary: $text-color-on-primary; // todo: fix, value from basic theme
-$theme-dark-text-color-on-inverted: $color-mud_black; // todo: fix, value from basic theme
-
-$theme-dark-secondary-text-color: $color-jaco_gray; // todo: fix, value from basic legacy palette
-$theme-dark-placeholder-color: $color-wolf_gray; // todo: fix, value from basic theme
-$theme-dark-icon-color: $color-wolf_gray; // todo: fix, value from basic theme
-
-$theme-dark-link-color: $color-arctic_blue;
+$theme-dark-text-color-on-primary: $text-color-on-primary; // value from basic theme
+$theme-dark-text-color-on-inverted: $color-mud_black; // value from basic theme
+$theme-dark-secondary-text-color: $color-jaco_gray; // todo:value from basic legacy palette, should be replaced
 
 // Background colors
 $theme-dark-primary-background-color: $color-midnight;
@@ -30,31 +25,36 @@ $theme-dark-secondary-background-color: $color-graphite;
 $theme-dark-grey-background-color: $color-midnight;
 $theme-dark-allgrey-background-color: $color-graphite;
 // - contrast hook
-$theme-dark-inverted-color-background: $color-snow_white; // todo: fix, value from basic theme
+$theme-dark-inverted-color-background: $color-snow_white; // value from basic theme
 
-// System Semantics (state, status)
-$theme-dark-disabled-text-color: $color-wolf_gray-muted;
-$theme-dark-disabled-background-color: $color-silver_muted;
-
-$theme-dark-positive-color: $positive-color;
-$theme-dark-positive-color-hover: $positive-color-hover;
-$theme-dark-positive-color-selected: $color-forest_green;
-$theme-dark-negative-color: $negative-color;
-$theme-dark-negative-color-hover: $negative-color-hover;
-$theme-dark-negative-color-selected: $color-maroon_red;
-$theme-dark-private-color: $private-color;
-$theme-dark-shareable-color: $shareable-color;
+// Generic Elements
+$theme-dark-placeholder-color: $color-wolf_gray; // value from basic theme
+$theme-dark-icon-color: $color-wolf_gray; // value from basic theme
+$theme-dark-link-color: $color-arctic_blue;
 
 // UI elements
 // - Borders
 $theme-dark-ui-border-color: $color-fog;
 $theme-dark-layout-border-color: $color-silver;
 
-// DARK THEME TOKENS: SHADOWS
+// System Semantics (state, status)
+// - State
+$theme-dark-disabled-text-color: $color-wolf_gray-muted; // Todo: temp value,should be refactored
+$theme-dark-disabled-background-color: $color-silver_muted;
+// - Status
+$theme-dark-positive-color: $positive-color;  // value from basic theme
+$theme-dark-positive-color-hover: $positive-color-hover; // value from basic theme
+$theme-dark-positive-color-selected: $color-forest_green;
+$theme-dark-negative-color: $negative-color; // value from basic theme
+$theme-dark-negative-color-hover: $negative-color-hover; // value from basic theme
+$theme-dark-negative-color-selected: $color-maroon_red;
+$theme-dark-private-color: $private-color; // value from basic theme
+$theme-dark-shareable-color: $shareable-color; // value from basic theme
 
+// Shadows
 $theme-dark-shadow-color: $color-rift; // todo: fix, not part of Vibe colors
 $theme-dark-shadow-opacity: 0.5;
-
+// - Shadows definitions
 $theme-dark-box-shadow-xs: $shadow-size-xs rgba($theme-dark-shadow-color, $theme-dark-shadow-opacity);
 $theme-dark-box-shadow-small: $shadow-size-small rgba($theme-dark-shadow-color, $theme-dark-shadow-opacity);
 $theme-dark-box-shadow-medium: $shadow-size-medium rgba($theme-dark-shadow-color, $theme-dark-shadow-opacity);
