--- a/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
+++ b/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
@@ -7,6 +7,8 @@
 // - Brand
 $color-ocean_blue: #133774;
 
+$color-arctic_blue: #69a7ef;
+
 // - Semantics
 $color-forest_green: #26503e;
 
@@ -17,23 +19,12 @@ $color-midnight: #181b34;
 $color-graphite: #30324e;
 $color-silver: #4b4e69;
 $color-fog: #797e93;
+$color-spacegrey: #9699a5; // Text
 $color-snow: #d5d8df;
 // - Muted
 $color-silver_muted: #3c3f59;
 $color-wolf_gray-muted: rgba($color-wolf_gray, 0.75);
 
-// Text
-$color-spacegrey: #9699a5;
-$color-arctic_blue: #69a7ef;
-
 // Shadow
-$color-rift: #090B19;
+$color-rift: #090B19; // Todo: fix, no part of vibe
 
-// temp alias
-// - todo: fix, not part of Vibe colors, used for:
-// -- var(--label-background-color)
-// -- var(--label-background-on-secondary-color)
-$color-buster_blue: #404b69;
-// - todo: fix, not part of Vibe colors, used for:
-// -- var(--dark-background-color)
-$color-carbon_blue: #393b53;
