--- a/src/config/tokens/themes/black/palette/_black-theme-palette.scss
+++ b/src/config/tokens/themes/black/palette/_black-theme-palette.scss
@@ -2,16 +2,14 @@
 // - This partial defines Black Theme's base color tokens
 
 // Natural / Gray
-$color-smoke: #8d8d8d;
-$color-dust: #636363;
-$color-night: #2c2c2c;
 $color-vanta: #111111;
+$color-night: #2c2c2c;
+$color-dust: #636363;
+$color-smoke: #8d8d8d;
+$color-mouse: #aaaaaa; // Secondary Text
+$color-smog: #eeeeee;// Text
 // - Muted
 $color-dust-muted: #3a3a3a;
-
-// Text
-$color-smog: #eeeeee;
-$color-mouse: #aaaaaa;
 
 // Surface
 $color-charcoal: #212121;
