--- a/src/config/tokens/themes/black/keys/legacy/_black-theme-legacy-keys.scss
+++ b/src/config/tokens/themes/black/keys/legacy/_black-theme-legacy-keys.scss
@@ -32,8 +32,8 @@ $theme-black-dark-background-color: $color-night;
 $theme-black-dark-background-on-secondary-color: $color-silver;
 $theme-black-dialog-background-color: $color-night;
 
-$theme-black-label-background-color: $color-buster_blue; // todo: fix, not part of Vibe colors
-$theme-black-label-background-on-secondary-color: $color-buster_blue; // todo: fix, not part of Vibe colors
+$theme-black-label-background-color: $color-buster_blue; // TODO: fix, not part of Vibe colors
+$theme-black-label-background-on-secondary-color: $color-buster_blue; // TODO: fix, not part of Vibe colors
 
 $theme-black-icon-on-secondary-color: $color-mouse;
 $theme-black-placeholder-color-with-opacity: rgba($color-mouse, 0.1);
