--- a/src/config/tokens/themes/dark/palette/legacy/_dark-theme-legacy-palette.scss
+++ b/src/config/tokens/themes/dark/palette/legacy/_dark-theme-legacy-palette.scss
@@ -2,10 +2,10 @@
 // These colors are used but are not part of Vibe, they should be gradually replaced.
 
 // temp alias
-// - todo: fix, not part of Vibe colors, used for:
+// - TODO: fix, not part of Vibe colors, used for:
 // -- var(--label-background-color)
 // -- var(--label-background-on-secondary-color)
 $color-buster_blue: #404b69; // not exported as custom property
-// - todo: fix, not part of Vibe colors, used for:
+// - TODO: fix, not part of Vibe colors, used for:
 // -- var(--dark-background-color)
 $color-carbon_blue: #393b53; // not exported as custom property
