--- a/src/config/tokens/_config-core-tokens.scss
+++ b/src/config/tokens/_config-core-tokens.scss
@@ -13,3 +13,6 @@
 @import "core/core-common";
 @import "core/core-fonts";
 @import "core/core-typography";
+
+// Legacy tokens
+@import "core/legacy/legacy-core-motion";
