--- a/src/config/maps/core/_core-motion-map.scss
+++ b/src/config/maps/core/_core-motion-map.scss
@@ -13,5 +13,5 @@ $core-motion-map: (
         motion-timing-exit: $motion-timing-exit,
         motion-timing-transition: $motion-timing-transition,
         motion-timing-emphasize: $motion-timing-emphasize,
-        expand-motion-timing: $expand-animation-timing,
+        expand-animation-timing: $expand-animation-timing,
 );
