--- a/src/config/maps/_config-dark-theme-maps.scss
+++ b/src/config/maps/_config-dark-theme-maps.scss
@@ -1,4 +1,4 @@
 // CONFIG: DARK THEME Maps
-// This partial loads Theme Basic's config maps
+// This partial loads Theme Hacker config maps
 @import "themes/dark/keys/dark-theme-keys";
 @import "themes/dark/keys/legacy/dark-theme-legacy-keys";
