--- a/src/debug/_debug-flags.scss
+++ b/src/debug/_debug-flags.scss
@@ -2,21 +2,22 @@
 // - Flag control debug tests: TRUE / FALSE
 // -- This is done to improve readability and to check by scopes.
 
-$debug-values: false;
-$debug-show-pass: false;
-$debug-show-converted: false;
+$debug-values: true;
+$debug-show-pass: true;
+$debug-show-converted: true;
 $debug-show-converted-fail: true;
 
 // Themes
-$debug-basic-theme: true;
-$debug-dark-theme: true;
-$debug-black-theme: true;
+$debug-basic-theme: false;
+$debug-dark-theme: false;
+$debug-black-theme: false;
+$debug-hacker-theme: true;
 
 // Scopes
 $debug-palette: true;
-$debug-legacy-palette: true;
+$debug-legacy-palette: false;
 $debug-keys: true;
-$debug-legacy-keys: true;
+$debug-legacy-keys: false;
 
 // Example
 $debug-example-verify-vibe-keys: false;
