Add hacker theme legacy debug

--- a/src/debug/_debug-flags.scss
+++ b/src/debug/_debug-flags.scss
@@ -17,7 +17,7 @@ $debug-hacker-theme: true;
 $debug-palette: true;
 $debug-legacy-palette: false;
 $debug-keys: true;
-$debug-legacy-keys: false;
+$debug-legacy-keys: true;
 
 // Example
 $debug-example-verify-vibe-keys: false;
