Set debug to false

--- a/src/debug/_debug-flags.scss
+++ b/src/debug/_debug-flags.scss
@@ -2,22 +2,22 @@
 // - Flag control debug tests: TRUE / FALSE
 // -- This is done to improve readability and to check by scopes.
 
-$debug-values: true;
-$debug-show-pass: true;
-$debug-show-converted: true;
-$debug-show-converted-fail: true;
+$debug-values: false;
+$debug-show-pass: false;
+$debug-show-converted: false;
+$debug-show-converted-fail: false;
 
 // Themes
 $debug-basic-theme: false;
 $debug-dark-theme: false;
 $debug-black-theme: false;
-$debug-hacker-theme: true;
+$debug-hacker-theme: false;
 
 // Scopes
-$debug-palette: true;
+$debug-palette: false;
 $debug-legacy-palette: false;
-$debug-keys: true;
-$debug-legacy-keys: true;
+$debug-keys: false;
+$debug-legacy-keys: false;
 
 // Example
 $debug-example-verify-vibe-keys: false;
