--- a/src/config/maps/core/_core-fonts-map.scss
+++ b/src/config/maps/core/_core-fonts-map.scss
@@ -5,7 +5,7 @@
 
 $core-fonts-map: (
   font-family: $font-family,
-  heading-font-family: $heading-font-family,
+  title-font-family: $title-font-family,
   h1-font-family: $h1-font-family,
   font-smoothing-webkit: $font-smoothing-webkit,
   font-smoothing-moz: $font-smoothing-moz
