--- a/src/config/tokens/core/_core-fonts.scss
+++ b/src/config/tokens/core/_core-fonts.scss
@@ -26,8 +26,8 @@ $font-weight-bold: 500;
 
 // - Font family
 $font-family: "Manrope", "Roboto", "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
-$heading-font-family: "Poppins", "Roboto", "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
-$h1-font-family: var(--heading-font-family);
+$title-font-family: "Poppins", "Roboto", "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
+$h1-font-family: var(--title-font-family);
 
 // - Font smoothing
 $font-smoothing-webkit: antialiased;
